# gdsl-zed-extension

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/: config.toml
languages/gdsl/: config.toml
src/: lib.rs
